--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "4.17.1",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
+    "hookrouter": "^1.2.3",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.1",
