--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
   "presets": [
-    "@babel/env",
-    "@babel/preset-react"
-    ],
+    "env",
+    "react"
+  ],
   "plugins": [
     "babel-plugin-transform-class-properties",
     "babel-plugin-transform-object-rest-spread"
