--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-modal": "^3.11.2",
+    "react-promise-tracker": "^2.1.0",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
